<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/bg"
    android:layout_width="match_parent"
    android:id="@+id/rootLayout"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:background="@color/auth_otp_sign_in_background" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="52dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY" />

    <ImageView
        android:layout_width="245dp"
        android:layout_height="245dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="-24dp"
        android:adjustViewBounds="true" />

    <ImageView
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/logo500" />




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:paddingBottom="12dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="128dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <EditText
                    android:id="@+id/edtFirstName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:drawableLeft="@drawable/ic_name"
                    android:hint="@string/hint_firstName"
                    android:textSize="15dp"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/edtLastName"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:theme="@style/SignInSignUpEditText" />

                <EditText
                    android:id="@+id/edtLastName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:drawableLeft="@drawable/ic_name"
                    android:textSize="15dp"
                    android:hint="@string/hint_lastName"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/signUp_email"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:theme="@style/SignInSignUpEditText" />

            </LinearLayout>

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableLeft="@drawable/ic_email"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textSize="15dp"
                android:nextFocusDown="@+id/signUn_password"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:theme="@style/SignInSignUpEditText" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableLeft="@drawable/ic_password"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textSize="15dp"
                android:nextFocusDown="@+id/signUp_phone"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:theme="@style/SignInSignUpEditText" />

            <EditText
            android:id="@+id/edtPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableLeft="@drawable/ic_phone"
            android:hint="@string/hint_phoneNumber"
            android:inputType="phone"
            android:maxLines="1"
            android:textSize="15dp"
            android:nextFocusDown="@+id/edtAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:theme="@style/SignInSignUpEditText" />

            <EditText
                android:id="@+id/edtAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableLeft="@drawable/ic_address"
                android:hint="@string/hint_address"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="15dp"
                android:nextFocusDown="@+id/signUp_pob"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:theme="@style/SignInSignUpEditText" />


            <Button
                android:id="@+id/signUp_signUpButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/button_signUp"
                android:textColor="@color/white"
                android:background="@drawable/btn_rounded_primary" />

            <LinearLayout
                android:id="@+id/signUp_signInButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="56dp"
                    android:layout_gravity="center_horizontal"
                    android:adjustViewBounds="true"
                    android:src="@drawable/pin_destination" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/button_signIn"
                    android:textColor="@color/white"
                    android:textSize="@dimen/signUp_size"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/button_haveAccount"
                    android:textColor="@color/white"
                    android:textSize="@dimen/signUp_desc" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>





</RelativeLayout>