<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/bg"

    android:layout_height="match_parent">


    <ImageView
        android:layout_width="245dp"
        android:layout_height="245dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="-24dp"
        android:adjustViewBounds="true" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/logo500"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:background="@color/black" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Good "
                android:textColor="@color/white"
                android:textSize="26sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_Day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="Morning"
                android:textColor="@color/white"
                android:textSize="26sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="2dp"
                android:background="@color/yellowfresh" />

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="Welcome to GO-TAXI, Have a nice day with GOTAXI"
        android:textColor="@color/white"
        android:textSize="10.0sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:theme="@style/MyEditTextTheme"
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableRight="@drawable/auth_ic_login"
                android:drawablePadding="16dp"
                android:drawableTint="@color/white"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:text=""
                android:textColor="@android:color/white"
                android:textSize="16sp" />


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:theme="@style/MyEditTextTheme"
                android:text=""
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="16dp"
                android:drawableEnd="@drawable/ic_password"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:background="@drawable/btn_rounded_primary"
                android:text="@string/button_signIn"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="13sp" />

            <Button
                android:id="@+id/forgot_password"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:background="@drawable/btn_rounded_red"
                android:text="@string/title_activity_forgot_password"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="@dimen/spacing_large"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tint="@color/white"
                app:srcCompat="@drawable/ic_language_black_24dp"/>

            <TextView
                android:id="@+id/changeLang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/lang_dialog_title"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginStart="3dp"/>
        </LinearLayout>



    </LinearLayout>
    <LinearLayout
        android:id="@+id/signIn_signUpButton"
        android:gravity="center"
        android:orientation="horizontal"
        android:tag="binding_14"
        android:background="@color/auth_cancel_reason_header"
        android:layout_width="fill_parent"
        android:layout_height="45.0dip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">


        <TextView
            android:textSize="14.0sp"
            android:textColor="@color/auth_bottom_bar_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_dontHaveAccount"
            />

        <Button
            android:id="@+id/btn_sign"
            android:textSize="14.0sp"
            android:textColor="@drawable/auth_text_green_selector"
            android:gravity="center_vertical"
            android:tag="binding_2"
            android:layout_width="wrap_content"
            android:layout_height="45.0dip"
            android:layout_marginLeft="6.0dip"
            android:text="@string/button_signUp"
            android:layout_marginStart="6.0dip"
            />
    </LinearLayout>


</RelativeLayout>